kubernetes/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: betflix-load-balancer
spec:
  selector:
    app.kubernetes.io/name: betflix
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
