kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: betflix
  labels:
    app.kubernetes.io/name: betflix
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: betflix
